fix(accessibility): fix contrast.

--- a/src/app/home/cookie/home.cookie.component.scss
+++ b/src/app/home/cookie/home.cookie.component.scss
@@ -1,3 +1,18 @@
 .strong {
     font-weight: bold;
 }
+
+.btn-primary {
+    background-color: #282828;
+    border-color: #282828 !important;
+}
+
+.btn-primary:hover {
+    background-color: lighten(#282828, 10%) !important;
+    border-color: #282828 !important;
+}
+
+.btn-primary:active {
+    background-color: lighten(#282828, 15%) !important;
+    border-color: #282828 !important;
+}
